Resolved removed jsx className on dev-link parent column && text alignment on project-desc column

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,6 +38,10 @@ body {
 ==================================
 */
 
+footer {
+    border-top: 1px dotted #ac9999;
+}
+
 .project-desc {
     color: #173a4a;
     padding: 1rem 2rem;
